# push_swap

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  run.sh  test.sh
checker_files/: main.c
src/: algorithm.c  cases.c  checker.c  display.c  errors.c  instructions.c  main.c  parsing.c  push_swap.h  short_cases.c  short_stack_optimisation.c  simple_sorting.c  simultaneous_sort.c  split_functions.c  stack_operations.c  three_two_sortings.c  wrappers.c
src/simultaneous_sort/: merge_functions.c  rename_functions.c  simultaneous_sort.c
src/stack_operations/: create_functions.c  push_functions.c  rotate_functions.c  stack_operations.c
src/wrappers/: wrappers.c  wrappers_a.c  wrappers_b.c
